--- a/templates/base.html
+++ b/templates/base.html
@@ -6,17 +6,17 @@
 </head>
 
 <body>
-    <nav class="navbar-light bg primary justify-content-between">
+    <nav class="navbar-dark bg primary justify-content-between">
         <div class="container">
-            <a href="/" class="navbar-brand text-light">Stupid Twitter</a>
+            <a href="/" class="navbar-brand text-dark">Stupid Twitter</a>
             <ul class="nav navbar-nav flex-row float-right">
-                <li class="nav-item"><a href="" class="nav-link pr-3 text-light">Login</a></li>
-                <li class="nav-item"><a href="" class="nav-link text-light">Sign Up</a></li>
+                <li class="nav-item"><a href="" class="nav-link pr-3 text-dark">Login</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-dark">Sign Up</a></li>
             </ul>
         </div>
     </nav>
     <div class="container" style="margin-top: 2em">
-        {% for msg in flashed_messages()%}
+        {% for msg in get_flashed_messages()%}
         <div class="alert alert-danger">{{msg}}</div>
         {% endfor %}
 
