--- a/templates/login.html
+++ b/templates/login.html
@@ -3,8 +3,8 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="display-1">Sign Up</h1>
-<p class="lead">Register below to join our application</p>
+<h1 class="display-1">Login</h1>
+<p class="lead">Login Below. Don't have an account? Register here. <a href="/register"></a></p>
 <form method="POST">
     {{form.hidden_tag()}}
     {% for field in form 
@@ -15,10 +15,11 @@
 
         {% for error in field.errors %}
         <span class="form-text text-danger">{{error}}</span>
+        {{error}}
         {% endfor %}
     </p>
     {% endfor %}
 
-    <button class="btn btn-success" type="submit">Register</button>
+    <button class="btn btn-success" type="submit">Login</button>
 </form>
 {% endblock %}
