--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,12 @@
         <div class="container">
             <a href="/" class="navbar-brand text-dark">Stupid Twitter</a>
             <ul class="nav navbar-nav flex-row float-right">
-                <li class="nav-item"><a href="/register" class="nav-link pr-3 text-dark">Login</a></li>
-                <li class="nav-item"><a href="/login" class="nav-link text-dark">Sign Up</a></li>
+                {% if session['user_id'] %}
+                <li class="nav-item"><a href="/logout" class="nav-link text-dark">Log Out</a></li>
+                {% else %}
+                <li class="nav-item"><a href="/login" class="nav-link pr-3 text-dark">Login</a></li>
+                <li class="nav-item"><a href="/register" class="nav-link text-dark">Sign Up</a></li>
+                {% endif%}
             </ul>
         </div>
     </nav>
