--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -3,5 +3,10 @@
 {% endblock %}
 {% block content %}
 
-{{ user.username}}
+<b>Username: </b>{{ user.username }}
+<b>Email: </b>{{user.email}}
+<b>First name: </b>{{user.first_name}}
+<b>Last name:</b> {{user.last_name}}
+
+
 {% endblock %}
