--- a/templates/tweets.html
+++ b/templates/tweets.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Stupid Twitter
+{% block title %} Stupid Twitter/Feedback
 {% endblock %}
 
 {% block content %}
