--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -8,6 +8,6 @@
 <b>First name: </b>{{user.first_name}}
 <b>Last name:</b> {{user.last_name}}
 FEEDBACK
-{{all_feedback}}
+{{feedback.user}}
 
 {% endblock %}
