--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,6 @@
     </p>
     {% endfor %}
 
-    <button class="btn btn-success" type="submit">Login</button>
+    <button class="btn btn-success" type="submit" action="/users/{{user.id}}">Login</button>
 </form>
 {% endblock %}
