--- a/templates/register.html
+++ b/templates/register.html
@@ -6,9 +6,9 @@
 <h1 class="display-1">Sign Up</h1>
 <p class="lead">Register below to join our application</p>
 <form method="POST">
-    {{form.hidden_tag()}}
-    {% for field in form 
-       if field.widget.input_type != 'hidden' %}
+    {{form2.hidden_tag()}}
+    {% for field in form2 %}
+    {% if field.widget.input_type != 'hidden' %}
     <p>
         {{field.label}}
         {{field(class_="form-control")}}
@@ -17,6 +17,7 @@
         <span class="form-text text-danger">{{error}}</span>
         {% endfor %}
     </p>
+    {% endif %}
     {% endfor %}
 
     <button class="btn btn-success" type="submit">Register</button>
